--- a/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
@@ -1124,13 +1124,52 @@ databaseChangeLog:
             referencedTableName: users
 
   - changeSet:
-      id: 1579061946733-1
+      id: 1579082322337-1
+      author: bin-eb
+      preConditions:
+        onFail: MARK_RAN
+        tableExists:
+          tableName: user_benefits_setting
+      changes:
+        - dropTable:
+            tableName: user_benefits_setting
+
+  - changeSet:
+      id: 1579082322337-2
       author: bin-eb
       changes:
-        - sql:
-            sql: set global event_scheduler = on;
-        - sql:
-            sql: DROP EVENT IF EXISTS set_user_benefit_setting_defaultvalue;
-        - sql:
-            sql: create event set_user_benefit_setting_defaultvalue on schedule every 1 year starts timestamp('2020-01-01','00:00:00') ON COMPLETION PRESERVE ENABLE do update user_benefits_setting s set s.hidden_banner = false;
+        - createTable:
+            columns:
+              - column:
+                  name: id
+                  type: binary(16)
+                  constraints:
+                    primaryKey: true
+              - column:
+                  name: user_id
+                  type: binary(16)
+              - column:
+                  name: effect_year
+                  type: varchar(4)
+              - column:
+                  name: created_at
+                  type: datetime
+              - column:
+                  name: updated_at
+                  type: datetime
+            tableName: user_benefits_setting
 
+  - changeSet:
+      id: 1579082322337-3
+      author: bin-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: user_id
+            baseTableName: user_benefits_setting
+            constraintName: fk_user_benefits_setting_users
+            onDelete: CASCADE
+            onUpdate: CASCADE
+            referencedColumnNames: id
+            referencedTableName: users
