--- a/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
@@ -1258,8 +1258,6 @@ databaseChangeLog:
               - column:
                   name: id
                   type: binary(16)
-                  constraints:
-                    primaryKey: true
               - column:
                   name: name
                   type: varchar(100)
@@ -1326,3 +1324,13 @@ databaseChangeLog:
         - dropColumn:
             columnName: name
             tableName: benefit_plan_coverages
+
+  - changeSet:
+      id: 1581056123
+      author: lei-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - addPrimaryKey:
+            tableName: benefit_coverages
+            columnNames: id
