1554: Fix git checkout local branch master error #711
1554: Fix git checkout local branch master error #711

--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
                         '\n---------------------------------'
                 script {
                     RELEASE = sh(returnStdout: true, script: ''' echo ${ref} | sed 's/^.*\\///' ''').trim()
-                    REF = RELEASE
+                    REF = sh(returnStdout: true, script: "echo ${ref}").trim()
                     if (RELEASE == "") {
                         RELEASE = 'master'
                         REF = 'origin/master'
