--- a/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-5.yml
@@ -1334,3 +1334,16 @@ databaseChangeLog:
         - addPrimaryKey:
             tableName: benefit_coverages
             columnNames: id
+
+  - changeSet:
+      id: 1581303128311-1
+      author: shuangyu-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: benefit_coverage_id
+            baseTableName: benefit_plan_coverages
+            constraintName: fk_benefit_plan_coverages_benefit_coverages
+            referencedColumnNames: id
+            referencedTableName: benefit_coverages
