--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,12 @@
       <version>1.4.200</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.2</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
