1748 : different roles view my team list (#774)
* Dashboard/Employees Bug - Managers cannot view their managers on My Team list

* Jenkins test insepection

* Jenkins test insepection

* Admin role commend

* rebuild code

* rebuild code

Co-authored-by: zzb <zhaozhebo@easternbay.cn>

--- a/pom.xml
+++ b/pom.xml
@@ -433,6 +433,7 @@
             <exclude>**/exception/*</exclude>
             <exclude>**/annotations/*</exclude>
             <exclude>**/pojo/*</exclude>
+            <exclude>**/repository/*</exclude>
           </excludes>
         </configuration>
         <executions>
