1718: add District of Columbia (#786)

--- a/src/main/resources/db/application/states-provinces.yml
+++ b/src/main/resources/db/application/states-provinces.yml
@@ -7,7 +7,7 @@ countries:
       - Arkansas
       - California
       - Colorado
-      - Columbia
+      - District of Columbia
       - Connecticut
       - Delaware
       - Florida
