1807：public system announcement. (#796)
1807：public system announcement. (#796)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -21,3 +21,30 @@ databaseChangeLog:
             onUpdate: CASCADE
             referencedColumnNames: id
             referencedTableName: benefit_plan_coverages
+
+  - changeSet:
+      id: 1585130225991-1
+      author: bin-eb
+      changes:
+        - createTable:
+            columns:
+              - column:
+                  name: id
+                  type: binary(16)
+              - column:
+                  name: user_id
+                  type: binary(16)
+              - column:
+                  name: content
+                  type: text
+              - column:
+                  name: is_past_announcement
+                  type: bool
+                  defaultValue: true
+              - column:
+                  name: created_at
+                  type: datetime
+              - column:
+                  name: updated_at
+                  type: datetime
+            tableName: system_announcements
