--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -9,7 +9,7 @@ void setBuildStatus(String message, String state) {
 }
 
 pipeline {
-    agent any
+    agent { label '!master' }
     stages {
         stage('unit tests') {
             steps {
