1824: adding expressions in the input box will report an error (#827)
1824: adding expressions in the input box will report an error

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -86,3 +86,36 @@ databaseChangeLog:
                   name: updated_at
                   type: datetime
             tableName: dismissed_at
+
+  - changeSet:
+      id: 1586827241004-0
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: alter table emails change from_name from_name varchar(255) character set utf8mb4;
+  - changeSet:
+      id: 1586827241004-1
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: alter table emails change to_name to_name varchar(255) character set utf8mb4;
+  - changeSet:
+      id: 1586827241004-2
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: alter table emails change content content text character set utf8mb4;
+  - changeSet:
+      id: 1586827241004-3
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: alter table time_off_request_comments change comment comment text character set utf8mb4;
