1908: improve the process of welcome email message filter (#849)
1908: improve the process of welcome email message filter (#849)

--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,12 @@
       <artifactId>jsr305</artifactId>
       <version>3.0.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+      <artifactId>owasp-java-html-sanitizer</artifactId>
+      <version>20191001.1</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
