--- a/pom.xml
+++ b/pom.xml
@@ -200,10 +200,10 @@
     </dependency>
 
     <dependency>
-    <groupId>redis.clients</groupId>
-    <artifactId>jedis</artifactId>
-    <version>2.9.0</version>
-    <type>jar</type>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+      <type>jar</type>
     </dependency>
 
     <dependency>
@@ -273,6 +273,11 @@
       <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
       <artifactId>owasp-java-html-sanitizer</artifactId>
       <version>20191001.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
   </dependencies>
 
@@ -440,6 +445,8 @@
             <exclude>**/annotations/*</exclude>
             <exclude>**/pojo/*</exclude>
             <exclude>**/repository/*</exclude>
+            <exclude>**/*Dto*</exclude>
+            <exclude>**/*Pojo*</exclude>
           </excludes>
         </configuration>
         <executions>
