--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,12 @@
     </dependency>
 
     <dependency>
+      <groupId>me.alidg</groupId>
+      <artifactId>errors-spring-boot-starter</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
       <artifactId>owasp-java-html-sanitizer</artifactId>
       <version>20191001.1</version>
