2121: add auto enroll new employees on paid holiday (#897)
2121: add auto enroll new employees on paid holiday (#897)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -715,3 +715,17 @@ databaseChangeLog:
       changes:
         - sql:
             sql: alter table user_compensations change column effective_date start_date datetime;
+
+  - changeSet:
+      id: 1590979227192-1
+      author: jay-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: is_paid_holidays_auto_enroll
+                  type: bool
+                  defaultValue: false
+            tableName: companies
