Bugfix/sh 2038 unable to display deactivated employee (#898)
* 2036: sonarqube UserService & UserPermissionUtils

* 2038: Unable to display deactivated employees after refresh

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2038: Unable to display deactivated employees

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2036: sonarqube UserService & UserPermissionUtils

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

* 2038: unable to display deactivated employee

--- a/config/application.yml
+++ b/config/application.yml
@@ -35,6 +35,21 @@ spring:
       enabled: true
       max-file-size: 30MB
       max-request-size: 30MB
+  quartz:
+    jdbc-store-type: jdbc
+    properties:
+      org:
+        quartz:
+          scheduler:
+            instanceName: clusteredScheduler
+            instanceId: AUTO
+          jobStore:
+            class: org.quartz.impl.jdbcjobstore.JobStoreTX
+            driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+            tablePrefix: QRTZ_
+            useProperties: false
+            dataSource: myDs
+
 cloud:
   aws:
     stack:
