--- a/config/application.yml
+++ b/config/application.yml
@@ -69,3 +69,7 @@ auth0:
   audience: hrs-backend
   jwks: https://${auth0.domain}/.well-known/jwks.json
   customNamespace: https://interviewed.com/
+
+user:
+  cached:
+    expiration: 36000
