--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -82,5 +82,8 @@ pipeline {
         failure {
             setBuildStatus("Build failed", "FAILURE")
         }
+        always {
+            cleanWs()
+        }
     }
 }
