2378:Change Text And Avatar On Employees Time Off Request Modal If Their Own Manager Is Deleted (#954)
* 2378: keep the comments of deleted manager and change the text of fronted

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1305,3 +1305,20 @@ databaseChangeLog:
       changes:
         - sql:
             sql: alter table user_compensations change overtime_status overtime_status_id binary(16);
+
+
+  - changeSet:
+      id: 1589964975996-11
+      author: Jiansheng-Xu
+      changes:
+        - dropForeignKeyConstraint:
+            baseTableName: time_off_request_comments
+            constraintName: fk_time_off_request_comments_users
+        - addForeignKeyConstraint:
+            baseColumnNames: user_id
+            baseTableName: time_off_request_comments
+            constraintName: fk_time_off_request_comments_users
+            onDelete: SET NULL
+            onUpdate: CASCADE
+            referencedColumnNames: id
+            referencedTableName: users
